[package]
name = "puniyu_adapter_console"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
puniyu_core.workspace = true
puniyu_adapter.workspace = true
async-trait.workspace = true

[build-dependencies]
puniyu_build.workspace = true
